# modern_wheel

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: stale.yml
cmake/find/: FindLibDL.cmake
cmake/pkg/: ModernWheelConfig.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  dlmanager.h  mwheel_utility.h  plugin_utility.h  prototype_factory.h  singleton.h
include/mwheel/: composite_base.h  decorator.h  dlmanager.h  expected.h  memento_originator.h  plugin.h  prototype_factory.h  serializable_object.h  singleton.h  utility.h
src/: CMakeLists.txt  dlmanager.cpp  serializable_object.cpp
test/: CMakeLists.txt  composite_base_test.cpp  decorator_test.cpp  dlmanager_test.cpp  expected_test.cpp  prototype_factory_test.cpp  singleton_test.cpp  test_main.cpp
test/fixtures/: CMakeLists.txt  client_interface.cpp  client_interface.h  internal_extension.cpp  internal_extension.h  plugin_extension.cpp  plugin_extension.h
